--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .App {
-  text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, sans-serif;
+  margin-left: 20px;
 }
